# Days-For-Exams

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
include/dfe/: AppController.hpp  DateTime.hpp  LockdownManager.hpp  Models.hpp  PolicyEngine.hpp  ProfileStore.hpp  SchedulerEngine.hpp  StudyInterface.hpp
qml/: Main.qml  qml.qrc
qml/components/: DockBar.qml  SchedulePanel.qml  TopBar.qml
qml/styles/: Theme.qml
src/: main.cpp
src/backend/: AppController.cpp
src/core/: DateTime.cpp  ProfileStore.cpp
src/scheduler/: SchedulerEngine.cpp
src/security/: LockdownManager.cpp  PolicyEngine.cpp
src/ui/: StudyInterface.cpp
tests/: SchedulerTests.cpp
